--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -3,5 +3,6 @@
     <string name="app_name">音乐</string>
     <string name="title_activity_top">榜单页面</string>
     <string name="action_settings">设置</string>
+    <string name="action_close">关闭</string>
     <string name="section_format">来自 %1$d 的欢迎</string>
 </resources>
