--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
     <string name="app_name">Music</string>
     <string name="title_activity_top">TopActivity</string>
     <string name="action_settings">Settings</string>
+    <string name="action_close">Close</string>
     <string name="section_format">Hello World from section: %1$d</string>
 </resources>
