--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">音乐</string>
-    <string name="title_activity_top">榜单页面</string>
+    <string name="title_activity_top">榜单音乐</string>
+    <string name="title_activity_local">本地音乐</string>
     <string name="action_settings">设置</string>
     <string name="action_close">关闭</string>
     <string name="section_format">来自 %1$d 的欢迎</string>
