--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,10 @@
 <resources>
     <string name="app_name">Music</string>
-    <string name="title_activity_top">TopActivity</string>
+    <string name="title_activity_top">BillMusic</string>
+    <string name="title_activity_local">LocalMusic</string>
     <string name="action_settings">Settings</string>
     <string name="action_close">Close</string>
     <string name="section_format">Hello World from section: %1$d</string>
+
+
 </resources>
