--- a/music/src/main/res/values/strings.xml
+++ b/music/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="title_activity_local">LocalMusic</string>
     <string name="action_settings">Settings</string>
     <string name="action_close">Close</string>
+    <string name="action_into_billboard">BillBoard</string>
+    <string name="action_into_local">Local</string>
     <string name="section_format">Hello World from section: %1$d</string>
 
 
