--- a/music/src/main/res/values/strings.xml
+++ b/music/src/main/res/values/strings.xml
@@ -1,12 +1,13 @@
 <resources>
     <string name="app_name">Music</string>
-    <string name="title_activity_top">BillMusic</string>
     <string name="title_activity_local">LocalMusic</string>
+    <string name="title_activity_top">BillMusic</string>
     <string name="action_settings">Settings</string>
     <string name="action_close">Close</string>
     <string name="action_into_billboard">BillBoard</string>
     <string name="action_into_local">Local</string>
     <string name="section_format">Hello World from section: %1$d</string>
+    <string name="delete">Delete</string>
 
 
 </resources>
