--- a/music/src/main/res/values-zh/strings.xml
+++ b/music/src/main/res/values-zh/strings.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">音乐</string>
-    <string name="title_activity_local">本地音乐</string>
-    <string name="title_activity_top">榜单音乐</string>
+    <string name="title_activity_song">音乐</string>
     <string name="action_settings">设置</string>
     <string name="action_close">关闭</string>
-    <string name="action_into_billboard">排行榜</string>
     <string name="action_into_local">本地</string>
-    <string name="section_format">来自 %1$d 的欢迎</string>
     <string name="delete">删除</string>
+    <string name="description_album_image">专集图片</string>
+    <string name="title_local">本地音乐</string>
+    <string name="title_new">最新音乐</string>
+    <string name="title_hot">最热音乐</string>
 </resources>
