--- a/music/src/main/res/values-zh/strings.xml
+++ b/music/src/main/res/values-zh/strings.xml
@@ -10,4 +10,5 @@
     <string name="title_local">本地音乐</string>
     <string name="title_new">最新音乐</string>
     <string name="title_hot">最热音乐</string>
+    <string name="action_search">搜索</string>
 </resources>
