--- a/music/src/main/res/values/strings.xml
+++ b/music/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="description_album_image">Album Image</string>
     <string name="title_new">New Music</string>
     <string name="title_hot">Hot Music</string>
+    <string name="action_search">Search</string>
 
 
 </resources>
